Update html files with new model set up.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <p>Get your greeting <a href="/greeting?name=Rob">here</a> or <a href="/greeting?name=Caroline">here</a>.</p>
+    <p>Get your greeting <a href="/greeting/1?name=Rob">here</a> or <a href="/greeting/1?name=Caroline">here</a>.</p>
 </body>
 </html>
