--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,8 +3,16 @@
 <head>
   <title>Greetings Service</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel='stylesheet' href='/webjars/bootstrap/3.3.7/css/bootstrap.min.css'>
 </head>
+
 <body>
-  <p>Get your greetings <a href="/greeting">here</a>.</p>
+  <div class="container">
+    <p>Get your greetings <a href="/greeting">here</a>.</p>
+  </div>
+
+  <script type="text/javascript" src="/webjars/jquery/2.2.4/jquery.min.js"></script>
+  <script type="text/javascript" src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
