Style the static home page.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,10 @@
 
 <body>
   <div class="container">
-    <p>Get your greetings <a href="/greeting">here</a>.</p>
+    <h1>Spring MVC development app</h1>
+
+    <p>Test various elements of MVC development in Java using the Spring Framework</p>
+    <p>Try out the <a href="/greeting">Greetings</a> application.</p>
   </div>
 
   <script type="text/javascript" src="/webjars/jquery/2.2.4/jquery.min.js"></script>
