Fix quoting inconsistencies in the html layouts.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
   <title>Greetings Service</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel='stylesheet' href='/webjars/bootstrap/css/bootstrap.min.css'>
+  <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css">
 </head>
 
 <body>
